# jil-im

./: .env.example  Cargo.toml  readme.md
src/: main.rs  redirect.rs
src/api_client/: mod.rs
src/create/: display_form.rs  mod.rs  submit_form.rs
src/create_link/: display_form.rs  mod.rs  submit_form.rs
src/list/: display_list.rs  mod.rs  submit_form.rs
src/state/: fetch.rs  mod.rs  sync.rs
src/util/: flash.rs  html_template.rs  mod.rs  redirect_to_referer_or.rs
templates/: about.jinja  base.html  base.jinja  create.html  create_link.jinja  display_list.jinja  hello.html
