[package]
name = "jil-im"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = "0.11.1"
axum = "0.7.1"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
golink = { version = "0.6.0" }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.3"
thiserror = "1.0.31"
timeago = { version = "0.4.2", features = ["chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower-sessions = "0.7.0"

[dev-dependencies]
pretty_assertions = "1.4.0"